correct dpi scaling issue that causes scroll_legend in chart to shift right

--- a/src/style.css
+++ b/src/style.css
@@ -133,7 +133,7 @@ div.float-left {
 }
 
 div.polar-sensor-left-panel {
-  width: 200px;
+  width: 230px;
   display: flex;
   flex-wrap: wrap;
   align-content: flex-start;
